trying to fix "XCBuildData/build.db": database is locked Possibly there are two concurrent builds running in the same filesystem location."

--- a/.github/jobs/test_install_ios.yml
+++ b/.github/jobs/test_install_ios.yml
@@ -30,11 +30,10 @@ jobs:
         sdk: 'iphoneos'
         useXcpretty: false
         configuration: Release
+        args: '-derivedDataPath $(Build.SourcesDirectory)/buildiOS/build-iphoneos'
       displayName: 'Build install iOS'
 
-    # set EFFECTIVE_PLATFORM_NAME explicitly for webp
     - script: |
-        export EFFECTIVE_PLATFORM_NAME=-iphoneos
         cmake --install buildiOS --prefix="$(Build.SourcesDirectory)/Install"
         lipo -info $(Build.SourcesDirectory)/Install/lib/libxr.a
       displayName: 'Install'
