--- a/.github/jobs/test_install_ios.yml
+++ b/.github/jobs/test_install_ios.yml
@@ -23,17 +23,11 @@ jobs:
         cmake -G Xcode -B buildiOS -D IOS=ON -D DEPLOYMENT_TARGET=${{ parameters.deploymentTarget }} -D CMAKE_UNITY_BUILD=$(UNITY_BUILD) -D BABYLON_DEBUG_TRACE=ON -D CMAKE_IOS_INSTALL_COMBINED=NO
       displayName: 'Generate iOS solution'
 
-#    - task: Xcode@5
-#      inputs:
-#        xcWorkspacePath: 'buildiOS/BabylonNative.xcodeproj'
-#        scheme: 'install'
-#        sdk: 'iphoneos'
-#        useXcpretty: false
-#        configuration: Release
-#      displayName: 'Build install iOS'
+    - script: |
+        cmake --build buildiOS --config Release -- -sdk iphoneos CODE_SIGNING_ALLOWED=NO
+      displayName: 'Build iOS solution'
 
     - script: |
-        export EFFECTIVE_PLATFORM_NAME=-iphoneos
         cmake --install buildiOS --prefix="$(Build.SourcesDirectory)/Install"
         lipo -info $(Build.SourcesDirectory)/Install/lib/libxr.a
       displayName: 'Install'
