--- a/.github/jobs/test_install_ios.yml
+++ b/.github/jobs/test_install_ios.yml
@@ -5,8 +5,8 @@ parameters:
 
 jobs:
   - job: ${{ parameters.name }}
-    #condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
-    timeoutInMinutes: 120
+    condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
+    timeoutInMinutes: 60
     pool:
       vmImage: ${{ parameters.vmImage }}
   
