--- a/nightly.yml
+++ b/nightly.yml
@@ -52,3 +52,9 @@ jobs:
     inputs:
       PathtoPublish: build/Apps/Playground
       ArtifactName: BabylonNativeNightlyPlayground
+
+  - task: PublishBuildArtifacts@1
+    displayName: Upload UnitTests
+    inputs:
+      PathtoPublish: build/Apps/UnitTests
+      ArtifactName: BabylonNativeNightlyUnitTests
