--- a/nightly.yml
+++ b/nightly.yml
@@ -39,10 +39,12 @@ jobs:
   - script: |
       Playground.exe app:///Scripts/validation_native.js
     workingDirectory: build/Apps/Playground/RelWithDebInfo
+    displayName: 'Run VisualizationTests'
 
   - script: |
       UnitTests.exe
     workingDirectory: build/Apps/UnitTests/RelWithDebInfo
+    displayName: 'Run UnitTests'
 
   - task: PublishBuildArtifacts@1
     displayName: Upload Errors images artifact
