--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,12 +49,10 @@ FetchContent_Declare(libwebp
 FetchContent_MakeAvailable(CMakeExtensions)
 
 if (VISIONOS OR IOS OR BABYLON_NATIVE_BUILD_SOURCETREE)
-    if (BABYLON_NATIVE_BUILD_SOURCETREE)
-        #FetchContent_Populate(ios-cmake)
-    else()
-        FetchContent_MakeAvailable_With_Message(ios-cmake)
+    FetchContent_MakeAvailable_With_Message(ios-cmake)
+    if (NOT BABYLON_NATIVE_BUILD_SOURCETREE)
+        set(CMAKE_TOOLCHAIN_FILE "${ios-cmake_SOURCE_DIR}/ios.toolchain.cmake" CACHE PATH "")
     endif()
-    set(CMAKE_TOOLCHAIN_FILE "${ios-cmake_SOURCE_DIR}/ios.toolchain.cmake" CACHE PATH "")
     set(ENABLE_ARC OFF CACHE STRING "Enables or disables ARC support.")
 endif()
 
