--- a/.github/jobs/linux.yml
+++ b/.github/jobs/linux.yml
@@ -30,28 +30,28 @@ jobs:
         ninja -C build
       displayName: 'Build X11'
     
-#    - script: |
-#        export DISPLAY=:99
-#        Xvfb :99 -screen 0 1600x900x24 &
-#        sleep 3
-#        cd build/Apps/ValidationTests
-#        ./ValidationTests
-#      # Only test with V8 for now as ValidationTests with JSC are pretty unstable
-#      condition: contains('${{ parameters.JSEngine }}', 'V8')
-#      displayName: 'Validation Tests'
-#
-#    - task: PublishBuildArtifacts@1
-#      inputs:
-#        artifactName: '${{ parameters.name }} Rendered Pictures'
-#        pathtoPublish: 'build/Apps/Playground/Results'
-#      displayName: 'Publish Tests ${{ parameters.name }} Results'
-#      condition: always()
-#    - task: PublishBuildArtifacts@1
-#      inputs:
-#        artifactName: '${{ parameters.name }} Error Pictures'
-#        pathtoPublish: 'build/Apps/Playground/Errors'
-#      displayName: 'Publish Tests ${{ parameters.name }} Errors'
-#      condition: failed()
+    - script: |
+        export DISPLAY=:99
+        Xvfb :99 -screen 0 1600x900x24 &
+        sleep 3
+        cd build/Apps/Playground
+        ./Playground app:///Scripts/validation_native.js
+      # Only test with V8 for now as ValidationTests with JSC are pretty unstable
+      condition: contains('${{ parameters.JSEngine }}', 'V8')
+      displayName: 'Validation Tests'
+
+    - task: PublishBuildArtifacts@1
+      inputs:
+        artifactName: '${{ parameters.name }} Rendered Pictures'
+        pathtoPublish: 'build/Apps/Playground/Results'
+      displayName: 'Publish Tests ${{ parameters.name }} Results'
+      condition: always()
+    - task: PublishBuildArtifacts@1
+      inputs:
+        artifactName: '${{ parameters.name }} Error Pictures'
+        pathtoPublish: 'build/Apps/Playground/Errors'
+      displayName: 'Publish Tests ${{ parameters.name }} Errors'
+      condition: failed()
 
     - script: |
         export DISPLAY=:99
