--- a/Dependencies/CMakeLists.txt
+++ b/Dependencies/CMakeLists.txt
@@ -49,7 +49,12 @@ elseif(GRAPHICS_API STREQUAL "D3D12")
 elseif(GRAPHICS_API STREQUAL "Metal")
     target_compile_definitions(bgfx PRIVATE BGFX_CONFIG_RENDERER_METAL=1)
 elseif(GRAPHICS_API STREQUAL "OpenGL")
-    target_compile_definitions(bgfx PRIVATE BGFX_CONFIG_RENDERER_OPENGLES=30)
+    # ES 3 for Android. OpenGL 4.6 for Linux
+    if (ANDROID)
+        target_compile_definitions(bgfx PRIVATE BGFX_CONFIG_RENDERER_OPENGLES=30)
+    else()
+        target_compile_definitions(bgfx PRIVATE BGFX_CONFIG_RENDERER_OPENGL=46)
+    endif()
     target_compile_definitions(bgfx PRIVATE BGFX_GL_CONFIG_TEXTURE_READ_BACK_EMULATION=1)
 elseif(GRAPHICS_API STREQUAL "Vulkan")
     target_compile_definitions(bgfx PRIVATE BGFX_CONFIG_RENDERER_VULKAN=1)
