debug graphics api

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -126,6 +126,8 @@ else()
     message(FATAL_ERROR "Unrecognized platform: ${CMAKE_SYSTEM_NAME}")
 endif()
 
+message("Graphics API B ${GRAPHICS_API} - ${BABYLON_NATIVE_PLATFORM}")
+
 if(APPLE)
     set(GRAPHICS_API Metal)
 elseif(UNIX)
@@ -145,6 +147,8 @@ elseif(WIN32)
         endif()
     endif()
 endif()
+
+message("Graphics API A ${GRAPHICS_API}")
 
 if(APPLE)
     set(BABYLON_NATIVE_PLATFORM_IMPL_EXT "mm")
