--- a/Dependencies/CMakeLists.txt
+++ b/Dependencies/CMakeLists.txt
@@ -49,10 +49,13 @@ elseif(GRAPHICS_API STREQUAL "D3D12")
 elseif(GRAPHICS_API STREQUAL "Metal")
     target_compile_definitions(bgfx PRIVATE BGFX_CONFIG_RENDERER_METAL=1)
 elseif(GRAPHICS_API STREQUAL "OpenGL")
+    message("using OpenGL")
     # ES 3 for Android. OpenGL 4.6 for Linux
     if (ANDROID)
+        message("using OpenGL ES 30")
         target_compile_definitions(bgfx PRIVATE BGFX_CONFIG_RENDERER_OPENGLES=30)
     else()
+        message("using OpenGL 46")
         target_compile_definitions(bgfx PRIVATE BGFX_CONFIG_RENDERER_OPENGL=46)
     endif()
     target_compile_definitions(bgfx PRIVATE BGFX_GL_CONFIG_TEXTURE_READ_BACK_EMULATION=1)
