--- a/.github/jobs/linux.yml
+++ b/.github/jobs/linux.yml
@@ -31,12 +31,8 @@ jobs:
       displayName: 'Build X11'
     
     - script: |
-        export DISPLAY=:99
-        Xvfb :99 -screen 0 1600x900x24 &
-        sleep 3
         cd build/Apps/Playground
-        export MESA_EXTENSION_OVERRIDE="-EGL_KHR_create_context"
-        ./Playground app:///Scripts/validation_native.js
+        xvfb-run ./Playground app:///Scripts/validation_native.js
       displayName: 'Validation Tests'
 
     - task: PublishBuildArtifacts@1
@@ -53,9 +49,6 @@ jobs:
       condition: failed()
 
     - script: |
-        export DISPLAY=:99
-        Xvfb :99 -screen 0 1600x900x24 &
-        while [ ! -e /tmp/.X11-unix/X99 ]; do sleep 0.1; done
         cd build/Apps/UnitTests
         ./UnitTests
       displayName: 'Unit Tests'
