xvfb-run ./UnitTests

--- a/.github/jobs/linux.yml
+++ b/.github/jobs/linux.yml
@@ -50,5 +50,5 @@ jobs:
 
     - script: |
         cd build/Apps/UnitTests
-        ./UnitTests
+        xvfb-run ./UnitTests
       displayName: 'Unit Tests'
