--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,6 +15,72 @@ variables:
   value: 16.2
 
 jobs:
+# Apple
+  - template: .github/jobs/macos.yml
+    parameters:
+      name: MacOS
+      vmImage: 'macOS-latest'
+
+  - template: .github/jobs/ios.yml
+    parameters:
+      name: iOS_iOS180
+      vmImage: 'macOS-latest'
+      deploymentTarget: 18.0
+
+  - template: .github/jobs/ios.yml
+    parameters:
+      name: iOS_iOS175
+      vmImage: 'macOS-latest'
+      deploymentTarget: 17.5
+
+# WIN32
+  - template: .github/jobs/win32.yml
+    parameters:
+      name: Win32_x64_D3D11
+      vmImage: 'windows-latest'
+      platform: x64
+
+  - template: .github/jobs/win32.yml
+    parameters:
+      name: Win32_x64_JSI_D3D11
+      vmImage: 'windows-latest'
+      platform: x64
+      napiType: jsi
+
+  - template: .github/jobs/win32.yml
+    parameters:
+      name: Win32_x64_V8_D3D11
+      vmImage: 'windows-latest'
+      platform: x64
+      napiType: V8
+
+  - template: .github/jobs/win32.yml
+    parameters:
+      name: Win32_x64_D3D12
+      vmImage: 'windows-latest'
+      platform: x64
+      graphics_api: D3D12
+
+# UWP
+  - template: .github/jobs/uwp.yml
+    parameters:
+      name: UWP_x64
+      vmImage: 'windows-latest'
+      platform: x64
+
+  - template: .github/jobs/uwp.yml
+    parameters:
+      name: UWP_arm64
+      vmImage: 'windows-latest'
+      platform: arm64
+
+  - template: .github/jobs/uwp.yml
+    parameters:
+      name: UWP_arm64_JSI
+      vmImage: 'windows-latest'
+      platform: arm64
+      napiType: jsi
+
 # Ubuntu/Linux
 
   # TODO: v8 is incompatible with curl for some reason
@@ -35,6 +101,52 @@ jobs:
       CC: gcc
       CXX: g++
       JSEngine: JavaScriptCore
+
+# Android
+  - template: .github/jobs/android.yml
+    parameters:
+      name: Android_Ubuntu_JSC
+      vmImage: 'ubuntu-latest'
+      JSEngine: JavaScriptCore
+
+  - template: .github/jobs/android.yml
+    parameters:
+      name: Android_Ubuntu_V8
+      vmImage: 'ubuntu-latest'
+      JSEngine: V8
+
+  - template: .github/jobs/android.yml
+    parameters:
+      name: Android_MacOS_JSC
+      vmImage: 'macOS-latest'
+      JSEngine: JavaScriptCore
+
+  - template: .github/jobs/android.yml
+    parameters:
+      name: Android_MacOS_V8
+      vmImage: 'macOS-latest'
+      JSEngine: V8
+
+# Installation tests. 
+  - template: .github/jobs/test_install_win32.yml
+    parameters:
+      name: Win32_Installation
+      vmImage: 'windows-latest'
+      platform: x64
+  - template: .github/jobs/test_install_linux.yml
+    parameters:
+      name: Linux_Installation
+      vmImage: 'ubuntu-latest'
+      JSEngine: JavaScriptCore
+  - template: .github/jobs/test_install_macos.yml
+    parameters:
+      name: MacOS_Installation
+      vmImage: 'macOS-14'
+  - template: .github/jobs/test_install_ios.yml
+    parameters:
+      name: iOS_Installation
+      vmImage: 'macOS-14'
+      deploymentTarget: 17.2
 
 # These Android tests are unstable on the CI emulator. Disabled until a more reliable solution is found.
 #  - template: .github/jobs/android_tests.yml
