--- a/Apps/Playground/Scripts/config.json
+++ b/Apps/Playground/Scripts/config.json
@@ -9,7 +9,9 @@
         {
             "title": "NME Shadow Map",
             "playgroundId": "#M3QR7E#83",
-            "referenceImage": "nmeshadowmap.png"
+            "excludedGraphicsApis": [ "OpenGL" ],
+            "referenceImage": "nmeshadowmap.png",
+            "comment": "xvfb : invalid enum with glRenderbufferStorage"
         },
         {
             "title": "Procedural texture with NME",
@@ -22,7 +24,9 @@
             "playgroundId": "#QFIGLW#9",
             "renderCount": 10,
             "errorRatio": 6,
-            "referenceImage": "gltfExtensionExtMeshGpuInstancingTest.png"
+            "excludedGraphicsApis": [ "OpenGL" ],
+            "referenceImage": "gltfExtensionExtMeshGpuInstancingTest.png",
+            "comment": "Test works with OpenGL but it so slow that CI times out"
         },
         {
             "title": "GLTF ext MSFT_LOD",
@@ -39,8 +43,10 @@
             "title": "GLTF Extension KHR_materials_volume with attenuation",
             "playgroundId": "#YG3BBF#18",
             "referenceImage": "gltfExtensionKhrMaterialsVolumeAttenuation.png",
+            "excludedGraphicsApis": [ "OpenGL" ],
             "errorRatio": 1.2,
-            "renderCount": 10
+            "renderCount": 10,
+            "comment": "xvfb : invalid enum with glRenderbufferStorage"
         },
         {
             "title": "GLTF ClearCoat",
@@ -66,6 +72,7 @@
         {
             "reason": "https://github.com/BabylonJS/BabylonNative/issues/1111",
             "title": "Thin Instances",
+            "errorRatio": 25,
             "playgroundId": "#V1JE4Z#1",
             "referenceImage": "thinInstances.png"
         },
@@ -108,7 +115,9 @@
             "title": "Glow layer and LODs",
             "playgroundId": "#UNS6ZV#2",
             "renderCount": 50,
-            "referenceImage": "glowlayerandlods.png"
+            "excludedGraphicsApis": [ "OpenGL" ],
+            "referenceImage": "glowlayerandlods.png",
+            "comment": "xvfb : invalid enum with glRenderbufferStorage"
         },
         {
             "title": "Nested BBG",
@@ -160,12 +169,18 @@
         {
             "title": "Soft Shadows",
             "playgroundId": "#0YYQ3N#0",
-            "referenceImage": "softShadows.png"
+            "errorRatio": 50,
+            "excludedGraphicsApis": [ "OpenGL" ],
+            "referenceImage": "softShadows.png",
+            "comment": "OpenGL: invalid light and wrong specular with SSAOcat.babylon"
         },
         {
             "title": "Soft Shadows (Right Handed)",
             "playgroundId": "#0YYQ3N#2",
-            "referenceImage": "softShadowsRightHanded.png"
+            "errorRatio": 50,
+            "excludedGraphicsApis": [ "OpenGL" ],
+            "referenceImage": "softShadowsRightHanded.png",
+            "comment": "OpenGL: invalid light and wrong specular with SSAOcat.babylon"
         },
         {
             "title": "RenderingGroupId",
@@ -176,12 +191,16 @@
             "title": "Light Projection Texture",
             "playgroundId": "#CQNGRK#0",
             "renderCount": 2,
-            "referenceImage": "LightProjectionTexture.png"
+            "excludedGraphicsApis": [ "OpenGL" ],
+            "referenceImage": "LightProjectionTexture.png",
+            "comment": "xvfb : no rendering"
         },
         {
             "title": "Point light shadows",
             "playgroundId": "#U2F7P9#4",
-            "referenceImage": "point-light-shadows.png"
+            "excludedGraphicsApis": [ "OpenGL" ],
+            "referenceImage": "point-light-shadows.png",
+            "comment": "xvfb : invalid enum with glRenderbufferStorage"
         },
         {
             "title": "Texture cache",
@@ -244,6 +263,7 @@
         {
             "title": "Fresnel",
             "playgroundId": "#603JUZ#1",
+            "errorRatio": 50,
             "referenceImage": "fresnel.png"
         },
         {
@@ -260,41 +280,46 @@
         {
             "title": "Multi camera rendering",
             "playgroundId": "#1LK70I#22",
+            "errorRatio": 50,
             "referenceImage": "multiCameraRendering.png"
         },
         {
             "title": "Multi cameras and output render target",
             "renderCount": 2,
             "playgroundId": "#BCYE7J#31",
-            "referenceImage": "multiCamerasOutputRenderTarget.png"
+            "excludedGraphicsApis": [ "OpenGL" ],
+            "referenceImage": "multiCamerasOutputRenderTarget.png",
+            "comment": "Incorrect rendering with OpenGL"
         },
         {
             "title": "Multi camera rendering with scissors",
             "playgroundId": "#1LK70I#35",
+            "errorRatio": 50,
             "referenceImage": "multiCameraRenderingWithScissors.png"
         },
         {
             "title": "Scissor test",
             "playgroundId": "#W7E7CF#34",
             "referenceImage": "scissor-test.png",
-            "excludedGraphicsApis": [ "D3D12" ],
-            "comment": "TODO: reenable D3D12 when automatic mip-maps issue is fixed in bgfx"
+            "excludedGraphicsApis": [ "D3D12", "OpenGL" ],
+            "comment": "TODO: reenable D3D12 when automatic mip-maps issue is fixed in bgfx. Incorrect rendering with OpenGL."
         },
         {
             "title": "Scissor test with 0.9 hardware scaling",
             "playgroundId": "#W7E7CF#34",
             "replace": "//options//, hardwareScalingLevel = 0.9;",
             "referenceImage": "scissor-test-2.png",
-            "excludedGraphicsApis": [ "D3D12" ],
-            "comment": "TODO: reenable D3D12 when automatic mip-maps issue is fixed in bgfx"
+            "excludedGraphicsApis": [ "D3D12", "OpenGL" ],
+            "errorRatio": 50,
+            "comment": "TODO: reenable D3D12 when automatic mip-maps issue is fixed in bgfx. Incorrect rendering with OpenGL"
         },
         {
             "title": "Scissor test with 1.5 hardware scaling",
             "playgroundId": "#W7E7CF#34",
             "replace": "//options//, hardwareScalingLevel = 1.5;",
             "referenceImage": "scissor-test-3.png",
-            "excludedGraphicsApis": [ "D3D12" ],
-            "comment": "TODO: reenable D3D12 when automatic mip-maps issue is fixed in bgfx"
+            "excludedGraphicsApis": [ "D3D12", "OpenGL" ],
+            "comment": "TODO: reenable D3D12 when automatic mip-maps issue is fixed in bgfx. Incorrect rendering with OpenGL"
         },
         {
             "title": "Scissor test with negative x and y",
@@ -493,7 +518,9 @@
         {
             "title": "GLTF Alien",
             "playgroundId": "#XN37SR#5",
-            "referenceImage": "gltfAlien.png"
+            "excludedGraphicsApis": [ "OpenGL" ],
+            "referenceImage": "gltfAlien.png",
+            "comment": " int/float casting see https://github.com/BabylonJS/BabylonNative/pull/1544"
         },
         {
             "title": "Interleaved buffers test",
