--- a/Apps/Playground/Scripts/config.json
+++ b/Apps/Playground/Scripts/config.json
@@ -112,6 +112,14 @@
             "referenceImage": "outline.png"
         },
         {
+            "title": "Glow layer and LODs",
+            "playgroundId": "#UNS6ZV#2",
+            "renderCount": 50,
+            "excludedGraphicsApis": [ "OpenGL", "D3D12" ],
+            "referenceImage": "glowlayerandlods.png",
+            "comment": "xvfb : invalid enum with glRenderbufferStorage. D3D12/CI: mapping a texture fails with error HRESULT 0x887A0005"
+        },
+        {
             "title": "Nested BBG",
             "playgroundId": "#ZG0C8B#6",
             "renderCount": 10,
@@ -120,7 +128,9 @@
         {
             "title": "Dynamic Texture context clip",
             "playgroundId": "#FU0ES5#47",
-            "referenceImage": "dynamicTextureClip.png"
+            "referenceImage": "dynamicTextureClip.png",
+            "excludedGraphicsApis": ["D3D12" ],
+            "comment": "D3D12/CI: Incorrect rendering of clipped texture"
         },
         {
             "title": "GUI3D SpherePanel",
