Restore libc++ char traits compatibility for Android

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,6 +78,13 @@ set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+if(ANDROID)
+    # Restore legacy std::char_traits specializations removed in newer libc++ versions
+    # so third-party dependencies that still rely on std::basic_string<unsigned short>
+    # continue to compile when using the Android NDK r28 toolchain.
+    add_compile_definitions(_LIBCPP_ENABLE_CXX20_REMOVED_CHAR_TRAITS_SPECIALIZATIONS)
+endif()
+
 # --------------------------------------------------
 # Options
 # --------------------------------------------------
