Declare Playground activity exported

--- a/Apps/Playground/Android/app/src/main/AndroidManifest.xml
+++ b/Apps/Playground/Android/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
       android:icon="@mipmap/ic_launcher"
       android:label="@string/playground_activity">
     <activity android:name="PlaygroundActivity"
+              android:exported="true"
               android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
               android:launchMode="singleTask"
               android:configChanges="orientation|keyboardHidden|screenSize">
