[CI maintenance] Fix test installation ios/macos + misc (#1550)
- Add `dist/` TS build folder in gitIgnore
- up to latest macOS for installation test iOS/macOS
- up Babylon.js to 8.28.2
- Increased Timeout to 60min because D3D12 check is way slower that it
was 2weeks ago
- Disabled 2 Visual Tests with D3D12
- Moved screenshot capture method from Engine to TestUtils

--- a/Apps/Playground/Scripts/config.json
+++ b/Apps/Playground/Scripts/config.json
@@ -115,9 +115,9 @@
             "title": "Glow layer and LODs",
             "playgroundId": "#UNS6ZV#2",
             "renderCount": 50,
-            "excludedGraphicsApis": [ "OpenGL" ],
+            "excludedGraphicsApis": [ "OpenGL", "D3D12" ],
             "referenceImage": "glowlayerandlods.png",
-            "comment": "xvfb : invalid enum with glRenderbufferStorage"
+            "comment": "xvfb : invalid enum with glRenderbufferStorage. D3D12/CI: mapping a texture fails with error HRESULT 0x887A0005"
         },
         {
             "title": "Nested BBG",
@@ -128,7 +128,9 @@
         {
             "title": "Dynamic Texture context clip",
             "playgroundId": "#FU0ES5#47",
-            "referenceImage": "dynamicTextureClip.png"
+            "referenceImage": "dynamicTextureClip.png",
+            "excludedGraphicsApis": ["D3D12" ],
+            "comment": "D3D12/CI: Incorrect rendering of clipped texture"
         },
         {
             "title": "GUI3D SpherePanel",
