--- a/Apps/package.json
+++ b/Apps/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "workspaces": [
-    "UnitTests"
+    "UnitTests",
+    "Playground"
   ],
   "scripts": {
     "getNightly": "node scripts/getNightly.js"
